# code-graph-mcp

./: .code-graph.toml  .code-graph.toml.example  .containerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  claude-container.sh  go.mod  go.sum  planning-config.json  rust-toolchain.toml
crates/code-graph-graph/: Cargo.toml
crates/code-graph-graph/src/: algorithms.rs  callgraph.rs  diagrams.rs  graph.rs  lib.rs  persist.rs  queries.rs  test_fixtures.rs
crates/code-graph-graph/src/persist/: mmap.rs  mod.rs  packed.rs
crates/code-graph-graph/tests/: concurrent.rs
crates/code-graph-lang/: Cargo.toml
crates/code-graph-lang-go/: Cargo.toml
crates/code-graph-lang-go/src/: helpers.rs  lib.rs  module_model.rs  queries.rs
crates/code-graph-lang-go/tests/: corpus.rs
crates/code-graph-lang-rust/: Cargo.toml
crates/code-graph-lang-rust/src/: crate_model.rs  helpers.rs  lib.rs  queries.rs
crates/code-graph-lang-rust/tests/: corpus.rs
crates/code-graph-lang/src/: helpers.rs  lib.rs
crates/code-graph-mcp/: Cargo.toml
crates/code-graph-mcp/src/: main.rs
crates/code-graph-mcp/tests/: smoke.rs
crates/code-graph-parse-test/: Cargo.toml
crates/code-graph-parse-test/src/: main.rs
crates/code-graph-path-trie/: Cargo.toml
crates/code-graph-path-trie/src/: interner.rs  iter.rs  lib.rs  node.rs  normalize.rs  set.rs  trie.rs
crates/code-graph-path-trie/tests/: basics.rs  entry.rs  iter.rs  oracle.rs  patricia.rs  set_interner.rs
crates/code-graph-tools/: Cargo.toml  build.rs
crates/code-graph-tools/src/: analyze_job.rs  discovery.rs  indexer.rs  lib.rs  server.rs  test_recording_plugin.rs
crates/code-graph-tools/src/handlers/: analyze.rs  mod.rs  query.rs  status.rs  structure.rs  symbols.rs  watch.rs
crates/code-graph-tools/tests/: analyze_async_lifecycle.rs  byte_budget_acceptance.rs  config_discovery.rs  coupling_dependencies.rs  cpp_macro_strip.rs  detect_cycles_envelope.rs  integration.rs  macro_define_function.rs  macro_define_type.rs  mixed_language.rs  path_normalization.rs  response_shape_acceptance.rs  rust_mod_resolution.rs  search_symbols_near_modes.rs  snapshot_responses.rs  snapshot_tools_list.rs  testdata_cpp_baseline.rs  ue_macro_support.rs  ue_synthetic.rs  validate_subtree.rs  virtual_overrides.rs  watch_cpp_macro_define_function.rs  watch_cpp_macro_define_type.rs  watch_cpp_macro_strip.rs  watch_csharp_reindex.rs  watch_dangling_edges.rs  watch_go_reindex.rs  watch_java_reindex.rs  watch_python_reindex.rs  watch_race.rs  watch_rust_reindex.rs
crates/code-graph-tools/tests/common/: mod.rs
crates/code-graph-tools/tests/snapshots/: snapshot_responses__response_analyze_codebase_python_models.snap  snapshot_responses__response_analyze_codebase_testdata_cpp.snap  snapshot_responses__response_analyze_codebase_testdata_mixed.snap  snapshot_responses__response_count_only_search_symbols.snap  snapshot_responses__response_detect_cycles.snap  snapshot_responses__response_generate_diagram_class_edges.snap  snapshot_responses__response_generate_diagram_class_mermaid.snap  snapshot_responses__response_generate_diagram_file_edges.snap  snapshot_responses__response_generate_diagram_file_mermaid.snap  snapshot_responses__response_generate_diagram_rust_trait_compute.snap  snapshot_responses__response_generate_diagram_symbol_edges.snap  snapshot_responses__response_generate_diagram_symbol_mermaid.snap  snapshot_responses__response_get_callees_byte_budget_truncated.snap  snapshot_responses__response_get_callees_engine_update.snap  snapshot_responses__response_get_callees_paginated_offset.snap  snapshot_responses__response_get_callers_byte_budget_truncated.snap  snapshot_responses__response_get_callers_engine_update.snap  snapshot_responses__response_get_callers_paginated_offset.snap  snapshot_responses__response_get_class_hierarchy_engine.snap  snapshot_responses__response_get_class_hierarchy_go_interface_reader.snap  snapshot_responses__response_get_class_hierarchy_python_dog.snap  snapshot_responses__response_get_class_hierarchy_rust_trait_greet.snap  snapshot_responses__response_get_class_hierarchy_truncated.snap  snapshot_responses__response_get_class_hierarchy_ue_aactor.snap  snapshot_responses__response_get_class_hierarchy_ue_double_macro.snap  snapshot_responses__response_get_coupling_engine_cpp_both.snap  snapshot_responses__response_get_coupling_engine_cpp_incoming.snap  (+39 more)
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/src/: config.rs  lib.rs
crates/codegraph-graph/: Cargo.toml
crates/codegraph-graph/src/: algorithms.rs  callgraph.rs  diagrams.rs  graph.rs  lib.rs  persist.rs  queries.rs  test_fixtures.rs
crates/codegraph-graph/tests/: concurrent.rs
crates/codegraph-lang/: Cargo.toml
crates/codegraph-lang-cpp/: Cargo.toml
crates/codegraph-lang-cpp/src/: helpers.rs  lib.rs  preprocess.rs  queries.rs
crates/codegraph-lang-cpp/tests/: corpus.rs
crates/codegraph-lang-go/: Cargo.toml
crates/codegraph-lang-go/src/: helpers.rs  lib.rs  queries.rs
crates/codegraph-lang-go/tests/: corpus.rs
crates/codegraph-lang-python/: Cargo.toml
crates/codegraph-lang-python/src/: helpers.rs  lib.rs  queries.rs
crates/codegraph-lang-python/tests/: corpus.rs
crates/codegraph-lang-rust/: Cargo.toml
crates/codegraph-lang-rust/src/: helpers.rs  lib.rs  queries.rs
crates/codegraph-lang-rust/tests/: corpus.rs
crates/codegraph-lang/src/: helpers.rs  lib.rs
crates/codegraph-parse-test/: Cargo.toml
crates/codegraph-parse-test/src/: main.rs
crates/codegraph-tools/: Cargo.toml
crates/codegraph-tools/src/: discovery.rs  indexer.rs  lib.rs  server.rs
crates/codegraph-tools/tests/: cpp_macro_strip.rs  integration.rs  mixed_language.rs  snapshot_responses.rs  snapshot_tools_list.rs  testdata_cpp_baseline.rs  watch_cpp_macro_strip.rs  watch_dangling_edges.rs  watch_go_reindex.rs  watch_python_reindex.rs  watch_race.rs  watch_rust_reindex.rs
testdata/rust/: Cargo.toml  MANIFEST.md  ripgrep-baseline.txt
testdata/rust/src/: errors.rs  lib.rs  main.rs  mod_only.rs  models.rs  traits.rs  utils.rs
(+410 files in other folders)
