[workspace]
resolver = "3"
members = [
    "crates/code-graph-mcp",
    "crates/code-graph-core",
    "crates/code-graph-lang",
    "crates/code-graph-graph",
    "crates/code-graph-tools",
    "crates/code-graph-lang-cpp",
    "crates/code-graph-lang-csharp",
    "crates/code-graph-lang-go",
    "crates/code-graph-lang-java",
    "crates/code-graph-lang-python",
    "crates/code-graph-lang-rust",
    "crates/code-graph-parse-test",
    "crates/code-graph-path-trie",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/danweinerdev/code-graph-mcp"
rust-version = "1.84"

[workspace.lints.rust]
# Workspace default: `deny` (not `forbid`) so a single audited crate
# (`code-graph-graph`) can opt into `#![allow(unsafe_code)]` for the
# v7 cache's mmap boundary. Every OTHER crate restores `forbid` via an
# explicit `#![forbid(unsafe_code)]` at its `lib.rs` top, so the
# safety wall stays load-bearing where it should. See lib.rs of each
# crate + .plans/Designs/PackedCache/README.md Decision 5.
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
toml = "0.8"
tempfile = "3"
tree-sitter = "0.26"
tree-sitter-cpp = "=0.23.4"
tree-sitter-rust = "=0.24.2"
tree-sitter-go = "=0.25.0"
tree-sitter-python = "=0.25.0"
tree-sitter-c-sharp = "=0.23.5"
tree-sitter-java = "=0.23.5"
streaming-iterator = "0.1"
rstest = "0.21"
pretty_assertions = "1"
walkdir = "2"
ignore = "0.4"
crossbeam-channel = "0.5"
dunce = "1"
rayon = "1.10"
regex = "1.12"
indexmap = "2"
parking_lot = "0.12"
rmcp = { version = "=1.5.0", features = ["server", "macros", "transport-io", "schemars"] }
notify-debouncer-full = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
schemars = "1"
insta = { version = "1", features = ["json", "redactions", "filters"] }
lasso = { version = "0.7", features = ["serialize"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
memmap2 = "0.9"

# Release profile: strip symbols and apply thin LTO so `make release` ships
# a small, optimized binary. `codegen-units = 1` trades build time for size.
[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
