[package]
name = "code-graph-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "In-memory code graph engine, algorithms, and persistence"

[lints]
workspace = true

[dependencies]
code-graph-core = { path = "../code-graph-core", features = ["rkyv"] }
code-graph-path-trie = { path = "../code-graph-path-trie" }
indexmap = { workspace = true }
lasso = { workspace = true }
memmap2 = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Test-only: every `serde_json` use in this crate's source lives inside
# a `#[cfg(test)]` block (verified via grep). Keeping it out of the
# production `[dependencies]` block trims the crate's apparent
# dependency surface — workspace consumers that don't pull serde_json
# elsewhere stay unaffected.
serde_json = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
