[package]
name = "code-graph-lang-go"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Go language plugin (tree-sitter-go) for code-graph-mcp"

[lints]
workspace = true

[dependencies]
code-graph-core = { path = "../code-graph-core" }
code-graph-lang = { path = "../code-graph-lang" }
code-graph-path-trie = { path = "../code-graph-path-trie" }
tree-sitter = { workspace = true }
tree-sitter-go = { workspace = true }
streaming-iterator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }
