[package]
name = "code-graph-lang-rust"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust language plugin (tree-sitter-rust) for code-graph-mcp"

[lints]
workspace = true

[dependencies]
code-graph-core = { path = "../code-graph-core" }
code-graph-lang = { path = "../code-graph-lang" }
code-graph-path-trie = { path = "../code-graph-path-trie" }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
streaming-iterator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
# `toml` is the standard Rust TOML parser (already a workspace dep used by
# `code-graph-core::config`). We need it here to read the `[package].name`
# field from each crate's `Cargo.toml` while building the Rust Crate Module
# Model (`crate_model.rs`). `serde` is required for the tiny manifest
# struct's `Deserialize` derive — no other serde-derived types live in
# this crate.
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }
# Used by post_index composition tests to materialize a real on-disk
# Cargo crate layout — the manifest-discovery walk reads `Cargo.toml`
# from the filesystem, so an in-memory fixture is not expressive enough.
tempfile = { workspace = true }
