[package]
name = "code-graph-lang"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LanguagePlugin trait and LanguageRegistry for dispatching parsers by file extension"

[lints]
workspace = true

[dependencies]
code-graph-core = { path = "../code-graph-core" }
thiserror = { workspace = true }
tree-sitter = { workspace = true }

[dev-dependencies]
tree-sitter-rust = { workspace = true }
