[package]
name = "code-graph-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP server that builds an in-memory semantic code graph from source files"

[lints]
workspace = true

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-lang = { path = "../codegraph-lang" }
codegraph-lang-cpp = { path = "../codegraph-lang-cpp" }
codegraph-graph = { path = "../codegraph-graph" }
codegraph-tools = { path = "../codegraph-tools" }
rmcp = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
