[package]
name = "code-graph-parse-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Developer CLI harness for testing language parsers against real codebases"

[lints]
workspace = true

[dependencies]
code-graph-core = { path = "../code-graph-core" }
code-graph-lang = { path = "../code-graph-lang" }
code-graph-lang-cpp = { path = "../code-graph-lang-cpp" }
code-graph-lang-csharp = { path = "../code-graph-lang-csharp" }
code-graph-lang-go = { path = "../code-graph-lang-go" }
code-graph-lang-java = { path = "../code-graph-lang-java" }
code-graph-lang-python = { path = "../code-graph-lang-python" }
code-graph-lang-rust = { path = "../code-graph-lang-rust" }
code-graph-tools = { path = "../code-graph-tools" }
