[package]
name = "codegraph-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "In-memory code graph engine, algorithms, and persistence"

[lints]
workspace = true

[dependencies]
codegraph-core = { path = "../codegraph-core" }
regex = { workspace = true }
