[package]
name = "codegraph-lang-cpp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "C++ language plugin (tree-sitter-cpp) for code-graph-mcp"

[lints]
workspace = true

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-lang = { path = "../codegraph-lang" }
tree-sitter = { workspace = true }
tree-sitter-cpp = { workspace = true }
