[package]
name = "codegraph-lang-rust"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust language plugin (tree-sitter-rust) for code-graph-mcp (placeholder for Phase 5)"

[lints]
workspace = true

[dependencies]
