[package]
name = "codegraph-lang-rust"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust language plugin (tree-sitter-rust) for code-graph-mcp"

[lints]
workspace = true

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-lang = { path = "../codegraph-lang" }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
streaming-iterator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }
