[package]
name = "codegraph-lang"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LanguagePlugin trait and LanguageRegistry for dispatching parsers by file extension"

[lints]
workspace = true

[dependencies]
