[package]
name = "codegraph-parse-test"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Developer CLI harness for testing language parsers against real codebases"

[lints]
workspace = true

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-lang = { path = "../codegraph-lang" }
codegraph-lang-cpp = { path = "../codegraph-lang-cpp" }
walkdir = { workspace = true }
