[package]
name = "codegraph-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP tool handlers, discovery walker, indexer, and watcher (placeholder for Phase 3)"

[lints]
workspace = true

[dependencies]
